[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yaa"
dynamic = ["version"]
description = "Yet Another Asgi Framework"
readme="README.md"
requires-python=">=3.10"
authors=[
    { name = "Emrys Liu", email = "1065873330@qq.com" }
]

[tool.ruff]
line-length = 120
select = ['I', 'E']
ignore = ['E501']

[tool.ruff.isort]
# @doc_see: https://docs.astral.sh/
combine-as-imports = true
